Add categorizing
